--- a/Elinor/Elinor/Elinor.csproj
+++ b/Elinor/Elinor/Elinor.csproj
@@ -66,7 +66,7 @@
     <ManifestKeyFile>Elinor_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <GenerateManifests>true</GenerateManifests>
+    <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
     <TargetZone>LocalIntranet</TargetZone>
@@ -75,7 +75,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EVE.Net, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -120,6 +120,7 @@
     <Compile Include="SelectLogPathWindow.xaml.cs">
       <DependentUpon>SelectLogPathWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Settings1.cs" />
     <Compile Include="StandingWrapper.cs" />
     <Compile Include="ProfileNameWindow.xaml.cs">
       <DependentUpon>ProfileNameWindow.xaml</DependentUpon>
